# edem-agents-tutorials

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
assignment/: instructions.md
notebooks/: deploy_gcp_clients.ipynb  evaluations.ipynb  local_rag_indexing.ipynb  mcp_tool_discovery.ipynb  vertex_search_indexing.ipynb
src/ai_news_journalist/: __init__.py  agent.py
src/ai_news_journalist/agents/: __init__.py  editor_agent.py  news_data_agent.py
src/ai_news_journalist/mcp_server/: __init__.py  journalist_server.py
src/ai_news_journalist/retrieval/: __init__.py  bigquery_news.py
src/ai_news_journalist/supervisor/: __init__.py  agent.py
src/ecominsights/: ecominsight_agent_architecture.excalidraw  ecominsight_agent_detalles_proyecto.md
src/project/: .env.example  README.md  pyproject.toml
src/project/agents/: __init__.py  agent.py  rag_agent.py  talk_with_data_agent.py
src/project/app/: main.py
src/project/config/: model.py  settings.py
src/project/docs/company_policies/: inventory_risk_policy.md  marketing_kpi_definitions.md  refund_policy.md  regional_sales_targets.md  revenue_recognition_policy.md
src/project/examples/: sample_outputs.md  sample_questions.md
src/project/mcp/: README.md  bigquery_mcp_server.py  tools.yaml
src/project/orchestrator/: __init__.py  agent.py  rag_agent.py  talk_with_data_agent.py
src/project/prompts/: orchestrator_prompt.md  rag_agent_prompt.md  talk_with_data_agent_prompt.md
src/project/services/: bigquery_service.py  rag_service.py
src/project/tests/: test_agents.py  test_bigquery_mcp_tools.py  test_rag_tools.py  test_talk_with_data_tools.py
src/project/tools/: bigquery_mcp_tools.py  rag_tools.py
src/tutorials/: model_config.py
src/tutorials/t05_mcp_agent/: notes_server.py  run_standalone_client.py
src/tutorials/t07_evaluations/: agent_runner.py  dataset.py  test_evals.py
src/tutorials/t09_local_rag_agent/: README.md
src/tutorials/t10_vertex_search_agent/: README.md
tests/: smoke_bigquery_news.py  smoke_journalist_mcp.py  test_bigquery_news_validation.py
tutorials/: model_config.py
tutorials/mcp_agent/: README.md
tutorials/multi_agent/supervisor/: agent.py  roll_die_agent.py  (+1 more)
tutorials/sequential_agent/: README.md
(+4 files in other folders)
