[project]
name = "adk-talk-with-data-rag-project"
version = "0.1.0"
description = "Educational multi-agent project: Orchestrator + RAG + Talk with Data using ADK-friendly abstractions"
requires-python = ">=3.10"
dependencies = [
  "google-adk[a2a]>=0.3",
  "google-cloud-bigquery>=3.30.0",
  "litellm>=1.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator", "config", "services", "tools"]
exclude = ["tests", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
